--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -9,7 +9,10 @@
         <div class="col-xs-7">
           <div class="social">
             {{ range .Site.Menus.topbar.ByWeight }}
-            <a href="{{ .URL }}" target="_blank" style="opacity: 1;">{{ .Pre }}</a>
+
+            <!-- Bit of a hack, to simplify calling javascript in html delivered in .URL (which should now include content logically delivered in original template via .PRE-param.) -->
+            {{ .URL | safeHTML }}
+
             {{ end }}
           </div>
         </div>
