Allow optional inclusion of Contact in footer

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,9 @@
 
         {{ partial "clients.html" . }}
 
-        {{ partial "footer.html" . }}
+        {{ .Scratch.Set "showContactInFooter" "true" }}
+
+        {{ partialCached "footer.html" . }}
 
     </div>
     <!-- /#all -->
