Point to github for website

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -83,7 +83,7 @@ _________________________________________________________ -->
               <!-- Not removing this link is part of the licence conditions of the template. Thanks for understanding :) -->
 
               {{ i18n "portedBy" | markdownify }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>.
-              Modded by <a href="https://github.com/dontrolle">Troels Damgaard</a>.
+              Modded by <a href="https://github.com/dontrolle/tedconsulting-dk">Troels Damgaard</a>.
             </p>
         </div>
     </div>
