--- a/static/css/style.red.css
+++ b/static/css/style.red.css
@@ -3576,6 +3576,7 @@ a.list-group-item.active > .badge,
   img.img-responsive {
     margin: 4px 0 0 4px;
     box-shadow: 0 0 0 4px #fff;
+    border-radius: 75%;    
   }
 }
 @media (max-width: 360px) {
