--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -115,7 +115,12 @@
       document.write("\" target=\"_blank\" style=\"opacity: 1;\">");
       document.write("<i class=\"fas fa-2x fa-envelope\"></i></a>")
     }
-
-</script>
+  </script>
+  
+  <script src="https://getinsights.io/js/insights.js"></script>
+  <script>
+  insights.init('kKprLW5GOe8DjIeJ');
+  insights.trackPages();
+  </script>
 
 </head>
