--- a/layouts/partials/carousel.html
+++ b/layouts/partials/carousel.html
@@ -14,7 +14,7 @@
                             {{ .description | safeHTML }}
                         </div>
                         <div class="col-sm-5">
-                            <img class="img-responsive" src="{{ .image }}" alt="">
+                            <img class="img-responsive round-image" src="{{ .image }}" alt="">
                         </div>
                     </div>
                 </div>
